...
/* Class = "UILabel"; text = "Please copy your passphrase to a safe place"; ObjectID = "Bhi-Ek-GeA"; */
"Bhi-Ek-GeA.text" = "Please copy your passphrase to a safe place";

/* Class = "UIButton"; normalTitle = "Send"; ObjectID = "Bq9-58-P4B"; */
"Bq9-58-P4B.normalTitle" = "Send";

/* Class = "UIButton"; normalTitle = "Receive"; ObjectID = "Bvb-4n-kDq"; */
"Bvb-4n-kDq.normalTitle" = "Receive";

/* Class = "UITextField"; placeholder = "Enter Address"; ObjectID = "C7M-rj-MOi"; */
"C7M-rj-MOi.placeholder" = "Enter Address";

/* Class = "UIButton"; normalTitle = "Retry"; ObjectID = "CET-86-9Ks"; */
...
/* Class = "UISegmentedControl"; Ne5-Eb-jRR.segmentTitles[1] = "Passphrase"; ObjectID = "Ne5-Eb-jRR"; */
"Ne5-Eb-jRR.segmentTitles[1]" = "Passphrase";

/* Class = "UILabel"; text = "Recent Transactions"; ObjectID = "Nrd-9b-OTD"; */
"Nrd-9b-OTD.text" = "Recent Transactions";

/* Class = "UITabBarItem"; title = "Home"; ObjectID = "O9b-Xn-KbE"; */
"O9b-Xn-KbE.title" = "Home";

/* Class = "UILabel"; text = "GWei"; ObjectID = "OKI-ac-MRs"; */
"OKI-ac-MRs.text" = "GWei";

/* Class = "UITextField"; placeholder = "Name your wallet"; ObjectID = "OVl-0c-dto"; */
...
/* Class = "UILabel"; text = "Label"; ObjectID = "r8e-Or-hCS"; */
"r8e-Or-hCS.text" = "Label";

/* Class = "UILabel"; text = "Success"; ObjectID = "rEe-uG-3Sg"; */
"rEe-uG-3Sg.text" = "Success";

/* Class = "UIButton"; normalTitle = "Copy wallet address"; ObjectID = "rSk-9a-V7H"; */
"rSk-9a-V7H.normalTitle" = "Copy wallet address";

/* Class = "UILabel"; text = "Value"; ObjectID = "rup-VG-Zaw"; */
"rup-VG-Zaw.text" = "Value";

/* Class = "UITabBarItem"; title = "Wallet"; ObjectID = "rxh-yF-97x"; */
...
